--- a/.nodeset.yml
+++ b/.nodeset.yml
@@ -29,3 +29,10 @@ sets:
     nodes:
       "main.foo.vm":
         prefab: 'ubuntu-server-12042-x64'
+  'centos-64-x64-multi':
+    default_node: 'main1.foo.vm'
+    nodes:
+      'main1.foo.vm':
+        prefab: 'centos-64-x64'
+      'main2.foo.vm':
+        prefab: 'centos-64-x64'
